# prasine-index

./: .env.example  .gitignore  DEV_LOG.md  Dockerfile  Makefile  PRASINE_INDEX_HANDOFF.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  eval.yml
agents/: __init__.py  context_agent.py  discovery_agent.py  extraction_agent.py  judge_agent.py  lobbying_agent.py  report_agent.py  verification_agent.py
alembic/: env.py
api/: __init__.py  main.py
core/: __init__.py  aggregate.py  data_manifest.py  database.py  logger.py  pdf_export.py  pipeline.py  retry.py  textutil.py
docker/: init.sql
docs/: data-sources.md  index.html
docs/reports/: bp-plc-manifest.json  bp-plc.md  danone-sa-1.md  danone-sa-2.md  danone-sa-3.md  danone-sa-4.md  danone-sa-5.md  danone-sa.md  enel-spa-1.md  enel-spa-2.md  enel-spa-3.md  enel-spa-4.md  enel-spa-5.md  enel-spa-manifest.json  enel-spa.md  glencore-plc-1.md  glencore-plc-2.md  glencore-plc-3.md  glencore-plc-4.md  glencore-plc-5.md  glencore-plc-manifest.json  glencore-plc.md  h-m-group-manifest.json  h-m-group.md  ikea-group-1.md  ikea-group-2.md  ikea-group-3.md  ikea-group-4.md  ikea-group-manifest.json  ikea-group.md  klm-royal-dutch-airlines-1.md  klm-royal-dutch-airlines.md  lkab-1.md  lkab-2.md  lkab.md  oresundskraft-1.md  oresundskraft-2.md  oresundskraft-3.md  oresundskraft-4.md  (+34 more)
eval/: __init__.py  golden_dataset.py
examples/: ryanair_greenest_airline.md
ingest/: __init__.py  ca100.py  cdp.py  climate_trace.py  coal_exit.py  edgar.py  eea_national.py  egt.py  enforcement.py  eprtr.py  eu_ets.py  eu_innovation_fund.py  eu_transparency_register.py  eurlex.py  eurostat.py  fossil_finance.py  gcpt.py  gogel.py  goget.py  influence_map.py  lobby_map.py  sbti.py  source_document.py  tpi.py
models/: __init__.py  claim.py  company.py  company_score.py  evidence.py  lobbying.py  score.py  trace.py
scripts/: detect_changes.py  enable_rls.py  export_pdf.py  recompute_aggregates.py  refresh_all.py  refresh_ca100.py  refresh_cdp.py  refresh_eea_national.py  refresh_egt.py  refresh_enforcement.py  refresh_eprtr.py  refresh_eu_innovation_fund.py  refresh_eu_transparency_register.py  refresh_eutl.bat  refresh_eutl.py  refresh_fossil_finance.py  refresh_gcel.py  refresh_gcpt.py  refresh_gogel.py  refresh_goget.py  refresh_influencemap.py  refresh_lobbymap.py  refresh_sbti.py  rerun_all.ps1  run_assessment.py  seed_eval_companies.py
tests/: __init__.py  test_agents.py  test_aggregate.py  test_entity_matching.py  test_models.py  test_pipeline.py
web/: README.md  package-lock.json  package.json  proxy.ts
(+44 files in other folders)
