[project]
name = "prasine-index"
version = "1.0.0"
description = "Automated EU corporate greenwashing monitoring and scoring."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# Third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "pgvector.*",
    "asyncpg.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff — linter and formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["agents", "core", "ingest", "api", "eval", "tests", "models"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ASYNC",# flake8-async
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI pattern)
    "SIM108", # ternary operator — sometimes less readable
    # TC001/002/003: all domain models are runtime objects, not annotation-only
    "TC001",
    "TC002",
    "TC003",
    # RUF001/002/003: em-dashes in docstrings are intentional prose, not code
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "core", "ingest", "api", "eval", "models"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
